// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`DropdownMenu Is hidden 1`] = `
.c0 {
  background-color: #FFFFFF;
  border: 1px solid #878F9A;
  border-radius: var(--border-radius);
  box-shadow: 0 10px 20px 0 rgb(0 0 0 / 0.2);
  color: #1B1C1E;
  list-style-type: none;
  position: absolute;
  width: 100%;
  z-index: 700;
}

.c6 {
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  border-radius: var(--border-radius);
  color: #006296;
  cursor: pointer;
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  font-size: 0.875rem;
  line-height: 1.5rem;
  -webkit-text-decoration: underline;
  text-decoration: underline;
}

.c6:hover {
  color: #003A5A;
}

.c6:visited {
  color: #006296;
}

.c6 {
  outline: 2px solid transparent;
  outline-offset: -2px;
}

.c6:focus-visible {
  box-shadow: 0 0 0 2px #006296;
  outline: 2px solid #84C6EA;
  outline-offset: -2px;
}

.c11 {
  border: 0;
  -webkit-clip: rect(0,0,0,0);
  clip: rect(0,0,0,0);
  height: 1px;
  margin: -1px;
  overflow: hidden;
  padding: 0;
  position: absolute;
  width: 1px;
}

.c10 {
  -webkit-align-self: center;
  -ms-flex-item-align: center;
  align-self: center;
  -webkit-flex-shrink: 0;
  -ms-flex-negative: 0;
  flex-shrink: 0;
  height: 1rem;
  margin-left: var(--spacing-half);
  margin-right: 0;
  width: 1rem;
}

.c7 {
  -webkit-align-items: baseline;
  -webkit-box-align: baseline;
  -ms-flex-align: baseline;
  align-items: baseline;
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
}

.c7:visited svg {
  color: #006296;
}

.c9 {
  display: block;
  overflow: hidden;
  text-overflow: ellipsis;
}

.c8 {
  color: #1B1C1E;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  line-height: 2rem;
  overflow: hidden;
  padding: 0 var(--spacing-2x) 0 var(--spacing-3x);
  -webkit-text-decoration: none;
  text-decoration: none;
  text-overflow: ellipsis;
  white-space: nowrap;
}

.c8 {
  outline: 2px solid transparent;
  outline-offset: -2px;
}

.c8:focus-visible {
  box-shadow: 0 0 0 0 transparent;
  outline: 2px solid #006296;
  outline-offset: -2px;
}

.c8:hover {
  background-color: #DBDEE1;
}

.c8:visited {
  color: #006296;
  fill: #006296;
}

.c8:visited svg {
  color: #006296;
  fill: #006296;
}

.c8[disabled] {
  color: #B7BBC2;
  fill: #B7BBC2;
  pointer-events: none;
}

.c1 {
  margin: 0;
  overflow-y: auto;
  padding: 0;
}

.c1:not(:last-child)::after {
  border-bottom: 1px solid #DBDEE1;
  content: '';
  display: block;
  margin: 0 var(--spacing-2x);
}

.c4 {
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  max-width: 100%;
}

.c5 {
  line-height: 1.25rem;
  margin: auto var(--spacing-1x) auto 0;
  overflow: hidden;
  text-overflow: ellipsis;
  white-space: nowrap;
}

.c3 {
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-flow: row wrap;
  -ms-flex-flow: row wrap;
  flex-flow: row wrap;
  font-size: 0.875rem;
  margin: 0;
  overflow: hidden;
  padding: 0 0 0 var(--spacing-half);
}

.c2 {
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  color: #1B1C1E;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  font-size: 0.875rem;
  height: 2rem;
  line-height: 2rem;
  padding: 0 var(--spacing-2x);
  -webkit-text-decoration: none;
  text-decoration: none;
  white-space: nowrap;
}

.c2 {
  outline: 2px solid transparent;
  outline-offset: -2px;
}

.c2:focus-visible {
  box-shadow: 0 0 0 0 transparent;
  outline: 2px solid #006296;
  outline-offset: -2px;
}

.c2:hover {
  background-color: #DBDEE1;
}

.c2[disabled],
.c2[disabled] * {
  color: #B7BBC2;
  cursor: default;
  fill: #B7BBC2;
  pointer-events: none;
}

<div
  class="c0"
  data-testid="menu-list"
  hidden=""
  id="uuid1"
>
  <ul
    aria-labelledby="firstGroup"
    class="c1"
  >
    <li>
      <a
        aria-disabled="false"
        class="c2"
        data-testid="listitem-optionA"
        href="/testA"
        tabindex="0"
      >
        <div
          class="c3"
        >
          <div
            class="c4"
          >
            <span
              class="c5"
            >
              optionA
            </span>
          </div>
        </div>
      </a>
    </li>
    <li>
      <a
        aria-disabled="false"
        class="c2"
        data-testid="listitem-optionB"
        href="/testB"
        tabindex="0"
      >
        <div
          class="c3"
        >
          <div
            class="c4"
          >
            <span
              class="c5"
            >
              optionB
            </span>
          </div>
        </div>
      </a>
    </li>
    <li>
      <a
        aria-disabled="false"
        class="c2"
        data-testid="listitem-optionC"
        href="/testC"
        tabindex="0"
      >
        <div
          class="c3"
        >
          <div
            class="c4"
          >
            <span
              class="c5"
            >
              optionC
            </span>
          </div>
        </div>
      </a>
    </li>
  </ul>
  <ul
    aria-labelledby="secondGroup"
    class="c1"
  >
    <li>
      <a
        aria-disabled="false"
        class="c6 c7 c8"
        href="https://external-link.com/a"
        target="_blank"
      >
        <span
          class="c9"
        >
          ExternalA
        </span>
        <svg
          aria-label="opens in a new tab"
          class="lucide lucide-external-link c10"
          fill="none"
          focusable="false"
          height="16"
          role="img"
          stroke="currentColor"
          stroke-linecap="round"
          stroke-linejoin="round"
          stroke-width="2"
          viewBox="0 0 24 24"
          width="16"
          xmlns="http://www.w3.org/2000/svg"
        >
          <path
            d="M15 3h6v6"
          />
          <path
            d="M10 14 21 3"
          />
          <path
            d="M18 13v6a2 2 0 0 1-2 2H5a2 2 0 0 1-2-2V8a2 2 0 0 1 2-2h6"
          />
        </svg>
        <span
          class="c11"
          data-testid="screen-reader-text"
        >
          (opens in a new tab)
        </span>
      </a>
    </li>
    <li>
      <a
        aria-disabled="false"
        class="c6 c7 c8"
        href="https://external-link.com/b"
        target="_blank"
      >
        <span
          class="c9"
        >
          ExternalB
        </span>
        <svg
          aria-label="opens in a new tab"
          class="lucide lucide-external-link c10"
          fill="none"
          focusable="false"
          height="16"
          role="img"
          stroke="currentColor"
          stroke-linecap="round"
          stroke-linejoin="round"
          stroke-width="2"
          viewBox="0 0 24 24"
          width="16"
          xmlns="http://www.w3.org/2000/svg"
        >
          <path
            d="M15 3h6v6"
          />
          <path
            d="M10 14 21 3"
          />
          <path
            d="M18 13v6a2 2 0 0 1-2 2H5a2 2 0 0 1-2-2V8a2 2 0 0 1 2-2h6"
          />
        </svg>
        <span
          class="c11"
          data-testid="screen-reader-text"
        >
          (opens in a new tab)
        </span>
      </a>
    </li>
    <li>
      <a
        aria-disabled="false"
        class="c6 c7 c8"
        href="https://external-link.com/c"
        target="_blank"
      >
        <span
          class="c9"
        >
          ExternalC
        </span>
        <svg
          aria-label="opens in a new tab"
          class="lucide lucide-external-link c10"
          fill="none"
          focusable="false"
          height="16"
          role="img"
          stroke="currentColor"
          stroke-linecap="round"
          stroke-linejoin="round"
          stroke-width="2"
          viewBox="0 0 24 24"
          width="16"
          xmlns="http://www.w3.org/2000/svg"
        >
          <path
            d="M15 3h6v6"
          />
          <path
            d="M10 14 21 3"
          />
          <path
            d="M18 13v6a2 2 0 0 1-2 2H5a2 2 0 0 1-2-2V8a2 2 0 0 1 2-2h6"
          />
        </svg>
        <span
          class="c11"
          data-testid="screen-reader-text"
        >
          (opens in a new tab)
        </span>
      </a>
    </li>
  </ul>
</div>
`;

exports[`DropdownMenu Matches the snapshot 1`] = `
.c0 {
  background-color: #FFFFFF;
  border: 1px solid #878F9A;
  border-radius: var(--border-radius);
  box-shadow: 0 10px 20px 0 rgb(0 0 0 / 0.2);
  color: #1B1C1E;
  list-style-type: none;
  position: absolute;
  width: 100%;
  z-index: 700;
}

.c6 {
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  border-radius: var(--border-radius);
  color: #006296;
  cursor: pointer;
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  font-size: 0.875rem;
  line-height: 1.5rem;
  -webkit-text-decoration: underline;
  text-decoration: underline;
}

.c6:hover {
  color: #003A5A;
}

.c6:visited {
  color: #006296;
}

.c6 {
  outline: 2px solid transparent;
  outline-offset: -2px;
}

.c6:focus-visible {
  box-shadow: 0 0 0 2px #006296;
  outline: 2px solid #84C6EA;
  outline-offset: -2px;
}

.c11 {
  border: 0;
  -webkit-clip: rect(0,0,0,0);
  clip: rect(0,0,0,0);
  height: 1px;
  margin: -1px;
  overflow: hidden;
  padding: 0;
  position: absolute;
  width: 1px;
}

.c10 {
  -webkit-align-self: center;
  -ms-flex-item-align: center;
  align-self: center;
  -webkit-flex-shrink: 0;
  -ms-flex-negative: 0;
  flex-shrink: 0;
  height: 1rem;
  margin-left: var(--spacing-half);
  margin-right: 0;
  width: 1rem;
}

.c7 {
  -webkit-align-items: baseline;
  -webkit-box-align: baseline;
  -ms-flex-align: baseline;
  align-items: baseline;
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
}

.c7:visited svg {
  color: #006296;
}

.c9 {
  display: block;
  overflow: hidden;
  text-overflow: ellipsis;
}

.c8 {
  color: #1B1C1E;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  line-height: 2rem;
  overflow: hidden;
  padding: 0 var(--spacing-2x) 0 var(--spacing-3x);
  -webkit-text-decoration: none;
  text-decoration: none;
  text-overflow: ellipsis;
  white-space: nowrap;
}

.c8 {
  outline: 2px solid transparent;
  outline-offset: -2px;
}

.c8:focus-visible {
  box-shadow: 0 0 0 0 transparent;
  outline: 2px solid #006296;
  outline-offset: -2px;
}

.c8:hover {
  background-color: #DBDEE1;
}

.c8:visited {
  color: #006296;
  fill: #006296;
}

.c8:visited svg {
  color: #006296;
  fill: #006296;
}

.c8[disabled] {
  color: #B7BBC2;
  fill: #B7BBC2;
  pointer-events: none;
}

.c1 {
  margin: 0;
  overflow-y: auto;
  padding: 0;
}

.c1:not(:last-child)::after {
  border-bottom: 1px solid #DBDEE1;
  content: '';
  display: block;
  margin: 0 var(--spacing-2x);
}

.c4 {
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  max-width: 100%;
}

.c5 {
  line-height: 1.25rem;
  margin: auto var(--spacing-1x) auto 0;
  overflow: hidden;
  text-overflow: ellipsis;
  white-space: nowrap;
}

.c3 {
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-flow: row wrap;
  -ms-flex-flow: row wrap;
  flex-flow: row wrap;
  font-size: 0.875rem;
  margin: 0;
  overflow: hidden;
  padding: 0 0 0 var(--spacing-half);
}

.c2 {
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  color: #1B1C1E;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  font-size: 0.875rem;
  height: 2rem;
  line-height: 2rem;
  padding: 0 var(--spacing-2x);
  -webkit-text-decoration: none;
  text-decoration: none;
  white-space: nowrap;
}

.c2 {
  outline: 2px solid transparent;
  outline-offset: -2px;
}

.c2:focus-visible {
  box-shadow: 0 0 0 0 transparent;
  outline: 2px solid #006296;
  outline-offset: -2px;
}

.c2:hover {
  background-color: #DBDEE1;
}

.c2[disabled],
.c2[disabled] * {
  color: #B7BBC2;
  cursor: default;
  fill: #B7BBC2;
  pointer-events: none;
}

<div
  class="c0"
  data-testid="menu-list"
  id="uuid1"
>
  <ul
    aria-labelledby="firstGroup"
    class="c1"
  >
    <li>
      <a
        aria-disabled="false"
        class="c2"
        data-testid="listitem-optionA"
        href="/testA"
        tabindex="0"
      >
        <div
          class="c3"
        >
          <div
            class="c4"
          >
            <span
              class="c5"
            >
              optionA
            </span>
          </div>
        </div>
      </a>
    </li>
    <li>
      <a
        aria-disabled="false"
        class="c2"
        data-testid="listitem-optionB"
        href="/testB"
        tabindex="0"
      >
        <div
          class="c3"
        >
          <div
            class="c4"
          >
            <span
              class="c5"
            >
              optionB
            </span>
          </div>
        </div>
      </a>
    </li>
    <li>
      <a
        aria-disabled="false"
        class="c2"
        data-testid="listitem-optionC"
        href="/testC"
        tabindex="0"
      >
        <div
          class="c3"
        >
          <div
            class="c4"
          >
            <span
              class="c5"
            >
              optionC
            </span>
          </div>
        </div>
      </a>
    </li>
  </ul>
  <ul
    aria-labelledby="secondGroup"
    class="c1"
  >
    <li>
      <a
        aria-disabled="false"
        class="c6 c7 c8"
        href="https://external-link.com/a"
        target="_blank"
      >
        <span
          class="c9"
        >
          ExternalA
        </span>
        <svg
          aria-label="opens in a new tab"
          class="lucide lucide-external-link c10"
          fill="none"
          focusable="false"
          height="16"
          role="img"
          stroke="currentColor"
          stroke-linecap="round"
          stroke-linejoin="round"
          stroke-width="2"
          viewBox="0 0 24 24"
          width="16"
          xmlns="http://www.w3.org/2000/svg"
        >
          <path
            d="M15 3h6v6"
          />
          <path
            d="M10 14 21 3"
          />
          <path
            d="M18 13v6a2 2 0 0 1-2 2H5a2 2 0 0 1-2-2V8a2 2 0 0 1 2-2h6"
          />
        </svg>
        <span
          class="c11"
          data-testid="screen-reader-text"
        >
          (opens in a new tab)
        </span>
      </a>
    </li>
    <li>
      <a
        aria-disabled="false"
        class="c6 c7 c8"
        href="https://external-link.com/b"
        target="_blank"
      >
        <span
          class="c9"
        >
          ExternalB
        </span>
        <svg
          aria-label="opens in a new tab"
          class="lucide lucide-external-link c10"
          fill="none"
          focusable="false"
          height="16"
          role="img"
          stroke="currentColor"
          stroke-linecap="round"
          stroke-linejoin="round"
          stroke-width="2"
          viewBox="0 0 24 24"
          width="16"
          xmlns="http://www.w3.org/2000/svg"
        >
          <path
            d="M15 3h6v6"
          />
          <path
            d="M10 14 21 3"
          />
          <path
            d="M18 13v6a2 2 0 0 1-2 2H5a2 2 0 0 1-2-2V8a2 2 0 0 1 2-2h6"
          />
        </svg>
        <span
          class="c11"
          data-testid="screen-reader-text"
        >
          (opens in a new tab)
        </span>
      </a>
    </li>
    <li>
      <a
        aria-disabled="false"
        class="c6 c7 c8"
        href="https://external-link.com/c"
        target="_blank"
      >
        <span
          class="c9"
        >
          ExternalC
        </span>
        <svg
          aria-label="opens in a new tab"
          class="lucide lucide-external-link c10"
          fill="none"
          focusable="false"
          height="16"
          role="img"
          stroke="currentColor"
          stroke-linecap="round"
          stroke-linejoin="round"
          stroke-width="2"
          viewBox="0 0 24 24"
          width="16"
          xmlns="http://www.w3.org/2000/svg"
        >
          <path
            d="M15 3h6v6"
          />
          <path
            d="M10 14 21 3"
          />
          <path
            d="M18 13v6a2 2 0 0 1-2 2H5a2 2 0 0 1-2-2V8a2 2 0 0 1 2-2h6"
          />
        </svg>
        <span
          class="c11"
          data-testid="screen-reader-text"
        >
          (opens in a new tab)
        </span>
      </a>
    </li>
  </ul>
</div>
`;
